new Auth0 tenant

--- a/src/auth_config.json
+++ b/src/auth_config.json
@@ -1,5 +1,5 @@
 {
-  "domain": "dev-wkurw2opu3uf0r3t.us.auth0.com",
-  "clientId": "ydREh2LvI0QoSsg4Dki2pq5WUH6gYDJf",
+  "domain": "dev-ahsivo00r84wgtro.jp.auth0.com",
+  "clientId": "6a5rtCZPyV2AmgFnEwhGpmG0WWri2gOx",
   "audience": "{yourApiIdentifier}"
 }
