--- a/src/auth_config.json
+++ b/src/auth_config.json
@@ -1,5 +1,4 @@
 {
   "domain": "dev-ahsivo00r84wgtro.jp.auth0.com",
-  "clientId": "6a5rtCZPyV2AmgFnEwhGpmG0WWri2gOx",
-  "audience": "{yourApiIdentifier}"
+  "clientId": "6a5rtCZPyV2AmgFnEwhGpmG0WWri2gOx"
 }
